--- a/Andre Carlos Candido da Silva/20240806_admin-template/assets/css/style.scss
+++ b/Andre Carlos Candido da Silva/20240806_admin-template/assets/css/style.scss
@@ -371,7 +371,9 @@ body {
 				margin-bottom: 6px;
 			}
 
-			input, select, textarea {
+			input,
+			select,
+			textarea {
 				color: #b4bed2;
 				font-size: 16px;
 				width: 100%;
@@ -384,11 +386,13 @@ body {
 				color-scheme: dark;
 			}
 		}
-		.form-actionn{
-			margin-top: 15px;
+
+		.form-actions {
 			display: flex;
 			justify-content: flex-end;
-			button{
+			margin-top: 15px;
+
+			button {
 				display: flex;
 				align-items: center;
 				justify-content: center;
@@ -399,10 +403,9 @@ body {
 				padding-right: 15px;
 				border-radius: 10px;
 				background-color: #3e79f7;
-				color: #fff;
-			    border: 0;
+				color: #FFF;
+				border: 0;
 				cursor: pointer;
-
 			}
 		}
 	}
