--- a/Brayan henrique haag/20240806_admin-template/assets/css/style.css
+++ b/Brayan henrique haag/20240806_admin-template/assets/css/style.css
@@ -233,7 +233,9 @@ body {
       text-transform: uppercase;
       font-weight: 500;
       margin-bottom: 6px; }
-    .container-box form label input, .container-box form label select, .container-box form label textarea {
+    .container-box form label input,
+    .container-box form label select,
+    .container-box form label textarea {
       color: #b4bed2;
       font-size: 16px;
       width: 100%;
