--- a/Brayan henrique haag/20240806_admin-template/assets/css/style.scss
+++ b/Brayan henrique haag/20240806_admin-template/assets/css/style.scss
@@ -371,7 +371,9 @@ body {
 				margin-bottom: 6px;
 			}
 
-			input, select, textarea {
+			input,
+			select,
+			textarea {
 				color: #b4bed2;
 				font-size: 16px;
 				width: 100%;
@@ -385,12 +387,12 @@ body {
 			}
 		}
 
-		.form-actions{
+		.form-actions {
 			display: flex;
 			justify-content: flex-end;
 			margin-top: 15px;
 
-			button{
+			button {
 				display: flex;
 				align-items: center;
 				justify-content: center;
