--- a/Willian_Cavalcante/20240806_admin-template/assets/css/style.scss
+++ b/Willian_Cavalcante/20240806_admin-template/assets/css/style.scss
@@ -18,6 +18,10 @@ body {
 	flex: 1;
 }
 
+.hide{
+	display: none;
+}
+
 .align-center {
 	margin-left: auto;
 	margin-right: auto;
@@ -386,12 +390,13 @@ body {
 				color-scheme: dark;
 			}
 		}
-		.form-actions{
-			margin-top: 15px;
+
+		.form-actions {
 			display: flex;
 			justify-content: flex-end;
+			margin-top: 15px;
 
-			button{
+			button {
 				display: flex;
 				align-items: center;
 				justify-content: center;
@@ -402,12 +407,10 @@ body {
 				padding-right: 15px;
 				border-radius: 10px;
 				background-color: #3e79f7;
+				color: #FFF;
 				border: 0;
-				color: #fff;
 				cursor: pointer;
 			}
-
-			
 		}
 	}
 }
