--- a/Geovana Fatima Paradella/20240806_admin-template/assets/css/style.scss
+++ b/Geovana Fatima Paradella/20240806_admin-template/assets/css/style.scss
@@ -17,6 +17,9 @@ body {
 .flex-1 {
 	flex: 1;
 }
+.hide{
+	display: none;
+}
 
 .align-center {
 	margin-left: auto;
@@ -363,7 +366,6 @@ body {
 			&+label {
 				margin-top: 15px;
 			}
-			
 
 			.lbl {
 				font-size: 14px;
@@ -372,7 +374,9 @@ body {
 				margin-bottom: 6px;
 			}
 
-			input, select, textarea {
+			input,
+			select,
+			textarea {
 				color: #b4bed2;
 				font-size: 16px;
 				width: 100%;
@@ -385,23 +389,25 @@ body {
 				color-scheme: dark;
 			}
 		}
-		.form-actions{
-			margin-top: 15px;
+
+		.form-actions {
 			display: flex;
 			justify-content: flex-end;
-			button{
+			margin-top: 15px;
+
+			button {
 				display: flex;
 				align-items: center;
 				justify-content: center;
-				min-width: 50px;
+				min-width: 80px;
 				font-size: 14px;
 				height: 40px;
 				padding-left: 15px;
 				padding-right: 15px;
 				border-radius: 10px;
-				background-color:  #3e79f7; ;
+				background-color: #3e79f7;
 				color: #FFF;
-				border: 0;	
+				border: 0;
 				cursor: pointer;
 			}
 		}
