--- a/rene_nunes/20240806_admin-template/assets/css/style.scss
+++ b/rene_nunes/20240806_admin-template/assets/css/style.scss
@@ -18,10 +18,15 @@ body {
 	flex: 1;
 }
 
+.hide {
+	display: none;
+}
+
 .align-center {
 	margin-left: auto;
 	margin-right: auto;
 }
+
 
 .main-container {
 	height: 100%;
