--- a/Nathan Gabriel Pinheiro/20240806_admin-template/assets/css/style.css
+++ b/Nathan Gabriel Pinheiro/20240806_admin-template/assets/css/style.css
@@ -14,6 +14,9 @@ body {
 .flex-1 {
   flex: 1; }
 
+.hide {
+  display: none; }
+
 .align-center {
   margin-left: auto;
   margin-right: auto; }
@@ -251,6 +254,7 @@ body {
     justify-content: flex-end;
     margin-top: 15px; }
     .container-box form .form-actions button {
+      display: flex;
       align-items: center;
       justify-content: center;
       min-width: 80px;
