--- a/Nathan Gabriel Pinheiro/20240806_admin-template/assets/css/style.scss
+++ b/Nathan Gabriel Pinheiro/20240806_admin-template/assets/css/style.scss
@@ -18,6 +18,10 @@ body {
 	flex: 1;
 }
 
+.hide{
+	display: none;
+}
+
 .align-center {
 	margin-left: auto;
 	margin-right: auto;
@@ -393,6 +397,7 @@ body {
 			margin-top: 15px;
 
 			button {
+				display: flex;
 				align-items: center;
 				justify-content: center;
 				min-width: 80px;
