--- a/Alan da Silva Batista/20240806_admin-template/assets/css/style.scss
+++ b/Alan da Silva Batista/20240806_admin-template/assets/css/style.scss
@@ -18,6 +18,14 @@ body {
 	flex: 1;
 }
 
+.hide{
+display: none;
+
+
+}
+
+
+
 .align-center {
 	margin-left: auto;
 	margin-right: auto;
@@ -371,7 +379,9 @@ body {
 				margin-bottom: 6px;
 			}
 
-			input, select, textarea {
+			input,
+			select,
+			textarea {
 				color: #b4bed2;
 				font-size: 16px;
 				width: 100%;
@@ -384,30 +394,27 @@ body {
 				color-scheme: dark;
 			}
 		}
-		.form-actions{
-		display: flex;
-		justify-content: flex-end;
-		 margin-top: 15px;
 
+		.form-actions {
+			display: flex;
+			justify-content: flex-end;
+			margin-top: 15px;
 
-		button{
-		 display: flex;
-		 align-items: center;
-		 justify-content: center;
-		 min-width: 80px;
-		 font-size: 14px;
-		 height: 40px;
-		 padding-left: 15px;
-		 padding-right: 15px;
-		 border-radius: 10px;
-		 background-color: #3e79f7;
-		 color: #FFF; 
-		 border: 0;
-		 cursor: pointer;
-		}
-		
-		
+			button {
+				display: flex;
+				align-items: center;
+				justify-content: center;
+				min-width: 80px;
+				font-size: 14px;
+				height: 40px;
+				padding-left: 15px;
+				padding-right: 15px;
+				border-radius: 10px;
+				background-color: #3e79f7;
+				color: #FFF;
+				border: 0;
+				cursor: pointer;
+			}
 		}
 	}
-
 }
