--- a/Joao Guilherme Bogo Cristovao/20240806_admin-template/assets/css/style.css
+++ b/Joao Guilherme Bogo Cristovao/20240806_admin-template/assets/css/style.css
@@ -14,6 +14,9 @@ body {
 .flex-1 {
   flex: 1; }
 
+.hide {
+  display: none; }
+
 .align-center {
   margin-left: auto;
   margin-right: auto; }
@@ -233,7 +236,9 @@ body {
       text-transform: uppercase;
       font-weight: 500;
       margin-bottom: 6px; }
-    .container-box form label input, .container-box form label select, .container-box form label textarea {
+    .container-box form label input,
+    .container-box form label select,
+    .container-box form label textarea {
       color: #b4bed2;
       font-size: 16px;
       width: 100%;
