--- a/Carlos Henrick Camargo Hoinats/20240806_admin-template/assets/css/style.scss
+++ b/Carlos Henrick Camargo Hoinats/20240806_admin-template/assets/css/style.scss
@@ -18,6 +18,10 @@ body {
 	flex: 1;
 }
 
+.hide {
+	display: none;
+}
+
 .align-center {
 	margin-left: auto;
 	margin-right: auto;
@@ -371,7 +375,9 @@ body {
 				margin-bottom: 6px;
 			}
 
-			input, select, textarea {
+			input,
+			select,
+			textarea {
 				color: #b4bed2;
 				font-size: 16px;
 				width: 100%;
@@ -385,12 +391,12 @@ body {
 			}
 		}
 
-		.form-actions{
+		.form-actions {
 			display: flex;
 			justify-content: flex-end;
 			margin-top: 15px;
 
-			button{
+			button {
 				display: flex;
 				align-items: center;
 				justify-content: center;
@@ -401,7 +407,7 @@ body {
 				padding-right: 15px;
 				border-radius: 10px;
 				background-color: #3e79f7;
-				color: #fff;
+				color: #FFF;
 				border: 0;
 				cursor: pointer;
 			}
