--- a/luan_ribeiro2/20240806_admin-template/assets/css/style.scss
+++ b/luan_ribeiro2/20240806_admin-template/assets/css/style.scss
@@ -16,6 +16,11 @@ body {
 
 .flex-1 {
 	flex: 1;
+	
+}
+
+.hide{
+display: none;
 }
 
 .align-center {
@@ -388,15 +393,15 @@ body {
 		}
 
 		.form-actions {
-			margin-top: 15px;
 			display: flex;
 			justify-content: flex-end;
+			margin-top: 15px;
 
 			button {
 				display: flex;
 				align-items: center;
 				justify-content: center;
-				min-width: 50px;
+				min-width: 80px;
 				font-size: 14px;
 				height: 40px;
 				padding-left: 15px;
@@ -405,10 +410,8 @@ body {
 				background-color: #3e79f7;
 				color: #FFF;
 				border: 0;
-				cursor: pointer ;
-		
+				cursor: pointer;
 			}
-
 		}
 	}
 }
