--- a/Daniel Silva Rangel Mota/20240806_admin-template/assets/css/style.scss
+++ b/Daniel Silva Rangel Mota/20240806_admin-template/assets/css/style.scss
@@ -18,6 +18,10 @@ body {
 	flex: 1;
 }
 
+.hide{
+	display: none;
+}
+
 .align-center {
 	margin-left: auto;
 	margin-right: auto;
@@ -371,7 +375,9 @@ body {
 				margin-bottom: 6px;
 			}
 
-			input, select, textarea {
+			input,
+			select,
+			textarea {
 				color: #b4bed2;
 				font-size: 16px;
 				width: 100%;
@@ -384,16 +390,17 @@ body {
 				color-scheme: dark;
 			}
 		}
-		.form-actions{
-			margin-top: 15px;
-			display:flex;
+
+		.form-actions {
+			display: flex;
 			justify-content: flex-end;
-			button{
-				cursor: pointer;
+			margin-top: 15px;
+
+			button {
 				display: flex;
 				align-items: center;
-				justify-items: center;
-				min-width: 50px;
+				justify-content: center;
+				min-width: 80px;
 				font-size: 14px;
 				height: 40px;
 				padding-left: 15px;
@@ -402,7 +409,7 @@ body {
 				background-color: #3e79f7;
 				color: #FFF;
 				border: 0;
-
+				cursor: pointer;
 			}
 		}
 	}
