--- a/Alisson dos Santos Guimaraes Mares/Desi2023_exercicios/20240806_admin-template/assets/css/style.scss
+++ b/Alisson dos Santos Guimaraes Mares/Desi2023_exercicios/20240806_admin-template/assets/css/style.scss
@@ -18,6 +18,10 @@ body {
 	flex: 1;
 }
 
+.hide{
+	display: none;
+}
+
 .align-center {
 	margin-left: auto;
 	margin-right: auto;
@@ -371,7 +375,9 @@ body {
 				margin-bottom: 6px;
 			}
 
-			input, select, textarea {
+			input,
+			select,
+			textarea {
 				color: #b4bed2;
 				font-size: 16px;
 				width: 100%;
@@ -391,10 +397,10 @@ body {
 			margin-top: 15px;
 
 			button {
-				display:flex;
+				display: flex;
 				align-items: center;
 				justify-content: center;
-				min-width: 50px;
+				min-width: 80px;
 				font-size: 14px;
 				height: 40px;
 				padding-left: 15px;
