--- a/Caio Cidral Ramos/20240806_admin-template/assets/css/style.css
+++ b/Caio Cidral Ramos/20240806_admin-template/assets/css/style.css
@@ -14,6 +14,9 @@ body {
 .flex-1 {
   flex: 1; }
 
+.hide {
+  display: none; }
+
 .align-center {
   margin-left: auto;
   margin-right: auto; }
@@ -264,5 +267,3 @@ body {
       color: #FFF;
       border: 0;
       cursor: pointer; }
-
-/*# sourceMappingURL=style.css.map */
