--- a/Pedro Zimermann/20240806_admin-template/assets/css/style.scss
+++ b/Pedro Zimermann/20240806_admin-template/assets/css/style.scss
@@ -17,7 +17,7 @@ body {
 .flex-1 {
 	flex: 1;
 }
-.hide{
+.hide {
 	display: none;
 }
 
@@ -52,7 +52,7 @@ body {
 				display: flex;
 				justify-content: space-between;
 				align-items: center;
-				color: #FFF;
+				color: #fff;
 
 				.hc-search {
 					color: #72849a;
@@ -94,7 +94,6 @@ body {
 						}
 
 						&.menu {
-
 							.menu-container {
 								display: flex;
 								align-items: center;
@@ -108,7 +107,6 @@ body {
 								}
 
 								.infos-ct {
-
 									.name,
 									.info {
 										font-size: 14px;
@@ -135,7 +133,7 @@ body {
 			height: 100%;
 			width: 250px;
 			position: relative;
-			color: #FFF;
+			color: #fff;
 			background-color: #283142;
 
 			.main-menu-inside {
@@ -154,9 +152,7 @@ body {
 				}
 
 				ul {
-
 					li {
-
 						a {
 							display: block;
 							padding: 12px 24px;
@@ -193,9 +189,7 @@ body {
 					flex: 1;
 
 					.ict-line-container {
-
 						.container-box {
-
 							.lc-cb-infos {
 								display: flex;
 								align-items: center;
@@ -205,7 +199,6 @@ body {
 									font-size: 30px;
 									font-weight: 700;
 									color: #d6d7dc;
-
 								}
 
 								.value-small {
@@ -238,8 +231,7 @@ body {
 	background-color: #283142;
 
 	.cb-header {
-
-		&+.cb-body {
+		& + .cb-body {
 			margin-top: 20px;
 		}
 	}
@@ -277,14 +269,14 @@ body {
 				height: 30px;
 				font-size: 12px;
 				border-radius: 30px;
-				color: #FFF;
+				color: #fff;
 				font-weight: 500;
 			}
 		}
 
 		.tbl-status {
 			display: inline-flex;
-			border: 1px solid #CCC;
+			border: 1px solid #ccc;
 			padding: 8px 12px;
 			border-radius: 8px;
 			font-size: 12px;
@@ -320,9 +312,7 @@ body {
 			border-collapse: separate;
 
 			thead {
-
 				tr {
-
 					th {
 						position: relative;
 						padding: 16px 16px;
@@ -338,14 +328,14 @@ body {
 			}
 
 			tbody {
-
 				tr {
-
 					td {
 						position: relative;
 						padding: 16px 16px;
 						overflow-wrap: break-word;
-						transition: background 0.2s, border-color 0.2s;
+						transition:
+							background 0.2s,
+							border-color 0.2s;
 						border-bottom: 1px solid #1c232f;
 					}
 
@@ -358,12 +348,11 @@ body {
 	}
 
 	form {
-
 		label {
 			display: flex;
 			flex-direction: column;
 
-			&+label {
+			& + label {
 				margin-top: 15px;
 			}
 
@@ -387,6 +376,10 @@ body {
 				border-radius: 6px;
 				outline: 0;
 				color-scheme: dark;
+
+				&.error{
+					border-color: #d86060;
+				}
 			}
 		}
 
@@ -406,7 +399,7 @@ body {
 				padding-right: 15px;
 				border-radius: 10px;
 				background-color: #3e79f7;
-				color: #FFF;
+				color: #fff;
 				border: 0;
 				cursor: pointer;
 			}
