--- a/Fabio Manske/20240806_admin-template/assets/css/style.scss
+++ b/Fabio Manske/20240806_admin-template/assets/css/style.scss
@@ -388,6 +388,10 @@ body {
 				border-radius: 6px;
 				outline: 0;
 				color-scheme: dark;
+
+				&.error{
+					border-color: #d86060;
+				}
 			}
 		}
 
