--- a/rene_nunes/20240806_admin-template/assets/css/style.scss
+++ b/rene_nunes/20240806_admin-template/assets/css/style.scss
@@ -389,6 +389,10 @@ body {
 				border-radius: 6px;
 				outline: 0;
 				color-scheme: dark;
+
+				&.error{
+					border-color: #d86060;
+				}
 			}
 		}
 
