--- a/Nathan Gabriel Pinheiro/20240806_admin-template/assets/css/style.scss
+++ b/Nathan Gabriel Pinheiro/20240806_admin-template/assets/css/style.scss
@@ -18,7 +18,7 @@ body {
 	flex: 1;
 }
 
-.hide{
+.hide {
 	display: none;
 }
 
@@ -388,6 +388,10 @@ body {
 				border-radius: 6px;
 				outline: 0;
 				color-scheme: dark;
+
+				&.error {
+					border-color: #d86060;
+				}
 			}
 		}
 
